# CPPDatenanalyse

./: CMakeLists.txt
aufgaben/: CMakeLists.txt  playground.cc
aufgaben/20200122/: aufgabe6.sh
aufgaben/20200122/include/: FourVector.h  LinkDef.h  test.root
aufgaben/20200122/lib/: FourVectorDict_rdict.pcm  FourVector_rdict.pcm  FourVector_rdict_rdict.pcm  libFourVector.rootmap  libFourVector_rdict.pcm
aufgaben/20200122/src/: FourVector.cxx  FourVectorDict.cxx  FourVectorDict_rdict.pcm  read_data.c  write_data.c
aufgaben/20210129/: aufgabe.c  fftTTree.root
aufgaben/20210205/: macro.cpp
aufgaben/20210212/: rooSimple.cc  rooSimple.cc.original
aufgaben/week1/: data.csv  data.txt  libweek1.cc  week1.cc
aufgaben/week2/: week2.h  week2tests.cc
aufgaben/week3/: week3tests.cc
include/: car.h  entities.h  intersection.h  libweek1.h  path.h  pool.h  road.h  traffic.h  week2.h  week3.h
presentation/: brainstorm.txt  presentation.tex
src/: libweek1.cc  libweek2.cc  libweek3.cc  week1.cc  week2.cc  week2tests.cc  week3tests.cc
src/traffic/: car.cc  intersection.cc  path.cc  pool.cc  road.cc  traffic.cc
traffic/: CMakeLists.txt  TODO.txt
traffic/include/: SDL_Manager.h  car.h  pool.h  road.h  traffic.h
traffic/src/: SDL_Manager.cc  car.cc  car.cu  intersection.cc  pool.cc  road.cc  traffic.cc
vorlesungen/20200115/: CaloFunc.C  pi0Decay.C  pi0DecayData.root  pi0Exp.C
vorlesungen/20201218/: function.c
vorlesungen/20210122/: fill_fit.c
vorlesungen/20210219/: FitTestTTree.root  macro.c  reader_macro.c  workspace.root
